--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "build": "gulp build"
   },
   "dependencies": {
-    "jquery": "^2.1.4"
+    "backbone": "^1.2.2",
+    "jquery": "^2.1.4",
+    "qs": "^5.0.0",
+    "socket.io-client": "^1.3.6",
+    "underscore": "^1.8.3"
   }
 }
